Bug 131979 - Control -- Appearance & Themes --> Background --> Get New Themes - Does Not Work
Summary: Control -- Appearance & Themes --> Background --> Get New Themes - Does Not ...
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: knewstuff (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Josef Spillner
URL:
Keywords:
: 133188 134823 (view as bug list)
Depends on:
Blocks:
 
Reported: 2006-08-07 01:56 UTC by tilleyrw
Modified: 2006-09-30 00:22 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tilleyrw 2006-08-07 01:56:59 UTC
Version:            (using KDE KDE 3.5.4)
Installed from:    Ubuntu Packages

From the KDE desktop, opening Settings --> Appearance & Themes --> Background, then clicking on "Get New Wallpapers" reveals a bug.

After the list of wallpapers is populated, the tab "Highest Rated" is displayed.  Clicking on a Title, Version, or Rating correctly loads a preview of the wallpaper.

However, choosing either of the secondary tabs "Most Downloads" or "Latest", and then clicking on a Title, Version, or Rating does not select that wallpaper.  The selection on the "Highest Rated" tab remains active and will not change, no matter where the mouse is clicked.  Only clicking on the "Highest Rated" tab causes the selection to change and a preview to be displayed.

Hope this helps, Bob
Comment 1 Victor Suarez 2006-08-15 13:07:08 UTC
This happens too in Superkaramba theme selector.
Comment 2 Frederic Van Assche 2006-09-03 14:53:01 UTC
This happens here too, in all knewstuff dialogs.
KDE 3.5.4 on Gentoo
Comment 3 Andreas Kling 2006-09-16 19:13:18 UTC
SVN commit 585244 by kling:

Unbreak "latest" and "most downloads" views.

BUG: 131979
BUG: 133852


 M  +3 -2      downloaddialog.cpp  
 M  +1 -1      downloaddialog.h  


--- branches/KDE/3.5/kdelibs/knewstuff/downloaddialog.cpp #585243:585244
@@ -255,7 +255,7 @@
   ctl->addTab(w_l, i18n("Latest"));
 
   m_curtab = 0;
-  connect(ctl, SIGNAL(tabSelected(int)), SLOT(slotTab(int)));
+  connect(ctl, SIGNAL(currentChanged(QWidget *)), SLOT(slotTab()));
 
   QHBoxLayout *box = new QHBoxLayout(frame);
   box->add(ctl);
@@ -601,8 +601,9 @@
   delete m_s;
 }
 
-void DownloadDialog::slotTab(int tab)
+void DownloadDialog::slotTab()
 {
+  int tab = static_cast<const QTabWidget *>(sender())->currentPageIndex();
   kdDebug() << "switch tab to: " << tab << endl;
 
   Entry *eold = getEntry();
--- branches/KDE/3.5/kdelibs/knewstuff/downloaddialog.h #585243:585244
@@ -216,7 +216,7 @@
     void slotInstall();
     void slotDetails();
     void slotInstalled(KIO::Job *job);
-    void slotTab(int tab);
+    void slotTab();
     void slotSelected();
     void slotPage(QWidget *w);
     void slotFinish();
Comment 4 Andreas Kling 2006-09-16 20:56:36 UTC
*** Bug 133188 has been marked as a duplicate of this bug. ***
Comment 5 Philip Rodrigues 2006-09-30 00:22:31 UTC
*** Bug 134823 has been marked as a duplicate of this bug. ***