Unbreak "latest" and "most downloads" views.

BUG: 131979
BUG: 133852

svn path=/branches/KDE/3.5/kdelibs/; revision=585244